@@ -1,0 +1,5 @@
+coef.mcmc.list <-
+function (object, ...)
+{
+    report(object, mean, ...)
+}
